# cargo-clippy-lints

./: Cargo.toml  lints.toml
src/: main.rs
