[package]
authors = ["i1i1"]
categories = ["cli", "lints", "cargo"]
description = "Utility for running lints specified from files"
edition = "2018"
keywords = ["cmd", "lints", "clippy", "cargo", "cli"]
license = "MIT"
name = "cargo-clippy-lints"
readme = "README.md"
repository = "https://github.com/i1i1/cargo-lints"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
serde = {version = "1.0.130", features = ["derive"]}
toml = "0.5.8"
